--- a/css/working.css
+++ b/css/working.css
@@ -39,6 +39,8 @@ h4 {
   /*background-color:rgba(0,0,0,0.04);*/
 }
 
+/* LOGO */
+
 #logo a {
   color: #000;
   text-decoration: none;
@@ -60,6 +62,8 @@ h4 {
   width: auto;
 }
 
+/*NAV*/
+
 #nav a { 
 color: #000; 
 font-weight: 300; 
@@ -68,7 +72,7 @@ text-decoration-color: transparent;
 display: inline-block; 
 width: 100%; 
 text-align: center; 
-transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
+transition: text-decoration-color .3s ease-in-out;
 }
 
 #nav a:hover { 
@@ -175,7 +179,70 @@ transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
     transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
 
+/*HOME*/
+
+#intro {
+  display: flex;
+  align-items: center;
+  height: 70vh;
+}
+
+#work h3 {
+  margin-bottom: 2rem;
+}
+
+.work-item {
+  overflow: hidden;
+  height: 0;
+  position: relative;
+  width: 100%; 
+  padding-top: calc((1 / 1) * 100%);
+}
+
+.work-item .inner {
+  text-decoration: none;
+  position: absolute;
+  display: flex;
+  align-items: flex-end;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+
+.work-item .inner .work-inside {
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+  color: #fff;
+  padding: 2rem;
+  width: 100%;
+  margin-left: 30%;
+  text-align: right;
+}
+
+.work-item .inner:hover .work-inside {
+  opacity: 1;
+}
+
+/*FOOTER*/
+
+#footer {
+  text-align: right;
+  font-size: .85rem;
+}
+
+/*RESPONSIVE*/
+
+/* for variable type sizing */
+@media screen and (min-width: 320px) {
+  body {
+    font-size: calc(12px + 4 * ((100vw - 320px) / 960));
+  }
+}
+
 @media all and (max-width: 699px) { 
+
   #nav-button {
     display: block;
   }
@@ -189,8 +256,31 @@ transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
     flex-basis: 100%;
     margin-bottom: 1rem;
   } 
+
+  #intro-holder h1 {
+    font-size: 3.2rem
+  }
+
+  .work-item .inner .work-inside {
+    opacity: 1;
+  }
+
 }
 
 @media all and (min-width: 700px) {
 
+  #intro {
+    height: 70vh;
+  }
+
+  #intro-holder {
+    padding: 0 5em;
+  }
+
+}
+
+@media screen and (min-width: 1220px) {
+  body {
+    font-size: 18px;
+  }
 }
