--- a/css/working.css
+++ b/css/working.css
@@ -197,18 +197,19 @@ transition: text-decoration-color .3s ease-in-out;
   position: relative;
   width: 100%; 
   padding-top: calc((1 / 1) * 100%);
+  background-color: #000;
 }
 
 .work-item .inner {
   text-decoration: none;
   position: absolute;
+  z-index: 2;
   display: flex;
   align-items: flex-end;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000;
 }
 
 .work-item .inner .work-inside {
@@ -217,12 +218,22 @@ transition: text-decoration-color .3s ease-in-out;
   color: #fff;
   padding: 2rem;
   width: 100%;
-  margin-left: 30%;
+  background-color:rgba(0,0,0,0.6);;
   text-align: right;
 }
 
 .work-item .inner:hover .work-inside {
   opacity: 1;
+}
+
+.work-item img {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*FOOTER*/
