--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
+/* vars */
+:root {
+  --background-color: #fff;
+  --body-color: #111;
+}
+
 body {
-  background-color: #ffffff;
-  color: #333333;
+  background-color: var(--background-color);
+  color: var(--body-color);
   font-family: 'Roboto Mono', monospace;
+  line-height: 1.5;
 }
 
 /*GENERAL*/
@@ -44,7 +51,7 @@ h4 {
 }
 
 #logo a {
-  color: #000;
+  color: var(--body-color);
   text-decoration: none;
   display: flex;
   width: 100%;
@@ -67,7 +74,7 @@ h4 {
 /*NAV*/
 
 #nav a { 
-color: #000; 
+color: var(--body-color);
 font-weight: 300; 
 letter-spacing: 2px; 
 text-decoration-color: transparent; 
@@ -78,7 +85,7 @@ transition: text-decoration-color .3s ease-in-out;
 }
 
 #nav a:hover { 
-  text-decoration-color: #000; 
+  text-decoration-color: var(--body-color);
 }
 
 #nav.active {
@@ -130,7 +137,7 @@ transition: text-decoration-color .3s ease-in-out;
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
+    background-color: var(--body-color); }
 
 .hamburger-box {
   width: 24px;
@@ -145,7 +152,7 @@ transition: text-decoration-color .3s ease-in-out;
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 24px;
     height: 2px;
-    background-color: #000;
+    background-color: var(--body-color);
     border-radius: 0px;
     position: absolute;
     transition-property: transform;
@@ -188,7 +195,8 @@ transition: text-decoration-color .3s ease-in-out;
   height: 70vh;
 }
 
-#work h3 {
+#work h3, #writing h3 {
+  letter-spacing: 1px;
   margin-bottom: 2rem;
 }
 
@@ -198,7 +206,7 @@ transition: text-decoration-color .3s ease-in-out;
   position: relative;
   width: 100%; 
   padding-top: calc((1 / 1) * 100%);
-  background-color: #000;
+  background-color: var(--body-color);
 }
 
 .work-item .inner {
@@ -237,6 +245,35 @@ transition: text-decoration-color .3s ease-in-out;
   height: 100%;
 }
 
+.writing-item .date-holder {
+  margin-bottom: .25em;
+}
+
+.writing-item .date {
+  margin: 0;
+  font-size: .85rem;
+  padding: 0 4px;
+  color: var(--background-color);
+  display: inline-block;
+  background-color: var(--body-color);
+}
+
+.writing-item h2 a {
+  color: var(--body-color);
+  text-decoration-color: transparent; 
+  transition: text-decoration-color .3s ease-in-out;
+}
+
+.writing-item h2 a:hover {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color); 
+}
+
+.writing-item p a {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color); 
+}
+
 
 /*FOOTER*/
 
@@ -259,7 +296,7 @@ transition: text-decoration-color .3s ease-in-out;
     display: block;
   }
   #nav {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid var(--body-color);
     padding-bottom: 1rem;
     display: none;
   }
