--- a/css/working.css
+++ b/css/working.css
@@ -1,8 +1,17 @@
-body {
-  background-color: #ffffff;
-  color: #333333;
-  font-family: 'Roboto Mono', monospace;
+/* vars */
+:root {
+  --background-color: #fff;
+  --body-color: #111;
 }
+
+body {
+  background-color: var(--background-color);
+  color: var(--body-color);
+  font-family: 'Roboto Mono', monospace;
+  line-height: 1.5;
+}
+
+/*GENERAL*/
 
 h1, h2, h3, h4 {
   margin: 0;
@@ -31,6 +40,8 @@ h4 {
   padding: 0 2rem;
 }
 
+/*MASTHEAD*/
+
 #masthead, #main {
   margin-bottom: 2rem;
 }
@@ -39,10 +50,8 @@ h4 {
   /*background-color:rgba(0,0,0,0.04);*/
 }
 
-/* LOGO */
-
 #logo a {
-  color: #000;
+  color: var(--body-color);
   text-decoration: none;
   display: flex;
   width: 100%;
@@ -65,7 +74,7 @@ h4 {
 /*NAV*/
 
 #nav a { 
-color: #000; 
+color: var(--body-color);
 font-weight: 300; 
 letter-spacing: 2px; 
 text-decoration-color: transparent; 
@@ -76,7 +85,7 @@ transition: text-decoration-color .3s ease-in-out;
 }
 
 #nav a:hover { 
-  text-decoration-color: #000; 
+  text-decoration-color: var(--body-color);
 }
 
 #nav.active {
@@ -128,7 +137,7 @@ transition: text-decoration-color .3s ease-in-out;
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
+    background-color: var(--body-color); }
 
 .hamburger-box {
   width: 24px;
@@ -143,7 +152,7 @@ transition: text-decoration-color .3s ease-in-out;
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 24px;
     height: 2px;
-    background-color: #000;
+    background-color: var(--body-color);
     border-radius: 0px;
     position: absolute;
     transition-property: transform;
@@ -178,7 +187,6 @@ transition: text-decoration-color .3s ease-in-out;
     transform: rotate(-90deg);
     transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
-
 /*HOME*/
 
 #intro {
@@ -187,7 +195,8 @@ transition: text-decoration-color .3s ease-in-out;
   height: 70vh;
 }
 
-#work h3 {
+#work h3, #writing h3 {
+  letter-spacing: 1px;
   margin-bottom: 2rem;
 }
 
@@ -197,7 +206,7 @@ transition: text-decoration-color .3s ease-in-out;
   position: relative;
   width: 100%; 
   padding-top: calc((1 / 1) * 100%);
-  background-color: #000;
+  background-color: var(--body-color);
 }
 
 .work-item .inner {
@@ -218,7 +227,7 @@ transition: text-decoration-color .3s ease-in-out;
   color: #fff;
   padding: 2rem;
   width: 100%;
-  background-color:rgba(0,0,0,0.6);;
+  background-color:rgba(0,0,0,0.6);
   text-align: right;
 }
 
@@ -235,6 +244,36 @@ transition: text-decoration-color .3s ease-in-out;
   width: 100%;
   height: 100%;
 }
+
+.writing-item .date-holder {
+  margin-bottom: .25em;
+}
+
+.writing-item .date {
+  margin: 0;
+  font-size: .85rem;
+  padding: 0 4px;
+  color: var(--background-color);
+  display: inline-block;
+  background-color: var(--body-color);
+}
+
+.writing-item h2 a {
+  color: var(--body-color);
+  text-decoration-color: transparent; 
+  transition: text-decoration-color .3s ease-in-out;
+}
+
+.writing-item h2 a:hover {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color); 
+}
+
+.writing-item p a {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color); 
+}
+
 
 /*FOOTER*/
 
@@ -253,12 +292,11 @@ transition: text-decoration-color .3s ease-in-out;
 }
 
 @media all and (max-width: 699px) { 
-
   #nav-button {
     display: block;
   }
   #nav {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid var(--body-color);
     padding-bottom: 1rem;
     display: none;
   }
@@ -267,7 +305,6 @@ transition: text-decoration-color .3s ease-in-out;
     flex-basis: 100%;
     margin-bottom: 1rem;
   } 
-
   #intro-holder h1 {
     font-size: 3.2rem
   }
@@ -290,8 +327,6 @@ transition: text-decoration-color .3s ease-in-out;
 
 }
 
-@media screen and (min-width: 1220px) {
-  body {
+body {
     font-size: 18px;
   }
-}
