--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ text-align: center;
 transition: text-decoration-color .3s ease-in-out;
 }
 
-#nav a:hover { 
+#nav a:hover, #nav a.active  { 
   text-decoration-color: var(--body-color);
 }
 
@@ -195,9 +195,14 @@ transition: text-decoration-color .3s ease-in-out;
   height: 70vh;
 }
 
-#work h3, #writing h3 {
+#work h3, #writings h3, #portfolio h3 {
   letter-spacing: 1px;
   margin-bottom: 2rem;
+}
+
+#work h3 a, #writings h3 a, #portfolio h3 a {
+  color: var(--body-color);
+  text-decoration: none;
 }
 
 .work-item {
@@ -249,6 +254,22 @@ transition: text-decoration-color .3s ease-in-out;
   margin-bottom: .25em;
 }
 
+.writing-item img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.writing-item .caption {
+  font-size: .75rem;
+  color: #666666;
+  display: block;
+  width: 100%;
+  margin-top: .5rem;
+  margin-bottom: 2rem;
+  text-align: right;
+}
+
 .writing-item .date {
   margin: 0;
   font-size: .85rem;
@@ -274,6 +295,30 @@ transition: text-decoration-color .3s ease-in-out;
   text-decoration-color: var(--body-color); 
 }
 
+/*PORTFOLIO + WRITING*/
+
+#portfolio, #writings {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+#portfolio .work-item {
+  padding-top: calc((9 / 16) * 100%);
+}
+
+#portfolio .work-item .inner .work-inside {
+  opacity: 1;
+}
+
+#portfolio p a {
+  color: var(--body-color);
+  text-decoration-color: var(--body-color); 
+  transition: text-decoration-color .3s ease-in-out;
+}
+
+#portfolio p a:hover {
+  text-decoration-color: transparent; 
+}
 
 /*FOOTER*/
 
